[package]
name = "serde-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2.2"
rmp = "^0.8"
rmp-serde = "1.1.2"
