[package]
name = "rust-fr"
version = "0.1.0"
edition = "2021"
description = "a toy data-interchange format"
repository = "https://github.com/is-it-ayush/rust-fr"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["rust", "fr", "data-interchange", "format", "toy"]
categories = ["encoding", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_fr"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
