[package]
name = "rust-fr"
version = "1.0.0"
edition = "2021"
description = "a simple, non-self-describing data-interchange format."
repository = "https://github.com/is-it-ayush/rust-fr"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["rust_fr", "encoding", "data-interchange", "format", "serde"]
categories = ["encoding", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_fr"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
bitvec = "1.0.1"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
serde_json = "1"
rmp-serde = "1.1.2"
ciborium = "0.2.2"
